k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cleanup-pvc
spec:
  containers:
    - name: cleanup-container
      image: busybox
      command: ["sh", "-c", "rm -rf /mnt/data/*"]
      volumeMounts:
        - name: db-vol
          mountPath: /mnt/data
  volumes:
    - name: db-vol
      persistentVolumeClaim:
        claimName: pvc
  restartPolicy: Never
