k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: craftisa-front
  labels:
    app: craftisa-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: craftisa-front
  template:
    metadata:
      labels:
        app: craftisa-front
    spec:
      containers:
        - name: front
          image: foliboni/craftisa-front
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: craftisa-front
spec:
  selector:
    app: craftisa-front
  ports:
  - port: 80
    targetPort: 3000            
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  labels:
    app: catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogue
  template:
    metadata:
      labels:
        app: catalogue
    spec:
      containers:            
        - name: catalogue
          image: foliboni/craftisa-catalogue
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
spec:
  selector:
    app: catalogue
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting
  labels:
    app: voting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting
  template:
    metadata:
      labels:
        app: voting
    spec:
      containers:            
        - name: voting
          image: foliboni/craftisa-voting
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: voting
spec:
  selector:
    app: voting
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recco
  labels:
    app: recco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recco
  template:
    metadata:
      labels:
        app: recco
    spec:
      containers:            
        - name: recco
          image: foliboni/craftisa-recom
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: recco
spec:
  selector:
    app: recco
  ports:
  - port: 8081
    targetPort: 8081            
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-db
spec:
  selector:
    matchLabels:
      app: catalogue-db
  template:
    metadata:
      labels:
        app: catalogue-db
    spec:
      containers:
        - name: catalogue-db
          image: postgres:15-alpine
          ports:
          - containerPort: 5432
          volumeMounts:
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db
spec:
  selector:
    app: catalogue-db
  ports:
  - port: 5432
    targetPort: 5432
