k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: craftisa-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: craftisa-front
                port:
                  number: 80
